test_src/compiler_errors/types/boolean/NotNumberError.b
class NotNumberError {
    void test() {
        println(!3);
    }
}
